# computer-game

./: .gitignore  .vimlocal  .vimlocal.vim  CMakeLists.txt  game  meson.build  oryx_license.txt
.github/ISSUE_TEMPLATE/: enhancement.md
assets/: manifest.json
assets/manifests/: textures.manifest  tilesets.manifest
assets/maps/: dungeon.atlas  forest.tileset  template.map  test.atlas  test.map
assets/maps/tilesets/: collision.tileset  forest.tileset  template.tileset
assets/tilesets/: collision.tileset  dungeon.tileset  monsters.tileset
scripts/: britishflag.py
src/: CMakeLists.txt  Install.cmake  main.cpp  mapEditor.cpp  meson.build  test.cpp  testVendors.cpp
src/Bindings/: Json.cpp  Json.hpp  meson.build
src/Engine/: Animation.cpp  Animation.hpp  Application.cpp  Application.hpp  AssetProvider.hpp  Atlas.cpp  Atlas.hpp  CMakeLists.txt  Constant.hpp  IState.hpp  Map.cpp  Map.hpp  StateStack.cpp  StateStack.hpp  Tween.cpp  Tween.hpp  Util.h  Util.hpp  Window.cpp  Window.hpp  meson.build
src/Game/: Application.cpp  Application.hpp  Atlas.hpp  CMakeLists.txt  ComputerGame.cpp  ComputerGame.hpp  Helper.cpp  Helper.hpp  meson.build
src/Game/Maps/: TestMap.hpp
src/Game/States/: TempState.cpp  TempState.hpp  TestState.cpp  TestState.hpp  meson.build.bk
src/Traits/: CMakeLists.txt  Constant.hpp  Helper.cpp  Helper.hpp  Log.cpp  Log.hpp  NoCopy.hpp  NoMove.hpp  meson.build
